--- a/src/otroPrograma/FXMLDocument.fxml
+++ b/src/otroPrograma/FXMLDocument.fxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="500" prefWidth="500" xmlns:fx="http://javafx.com/fxml/1" fx:controller="otroPrograma.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="500" prefWidth="500" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="otroPrograma.FXMLDocumentController">
     <children>
-         <Button fx:id="openCalcButton" text="Abrir Calculadora" 
-                AnchorPane.leftAnchor="50" AnchorPane.topAnchor="200" 
-                onAction="#handleOpenCalc"/>
-        <Button fx:id="closeCalcButton" text="Cerrar Calculadora" 
-                AnchorPane.leftAnchor="200" AnchorPane.topAnchor="200" 
-                onAction="#handleCloseCalc"/>
+        <Button fx:id="closeButton" layoutX="226.0" layoutY="401.0" onAction="#handleClose" text="Cerrar" AnchorPane.leftAnchor="226.0" AnchorPane.topAnchor="401.0" />
+      <Label fx:id="label" alignment="CENTER" layoutX="93.0" layoutY="110.0" prefHeight="83.0" prefWidth="315.0" text="Soy el Otro programa" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
